# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4

SUBDIRS = SharedLib source
INCLUDES = -I$(top_srcdir)/SharedLib -I$(top_srcdir)/SharedLib/lua \
	-I$(top_srcdir)/SharedLib/lua/src -I$(top_srcdir)/SharedLib/luabind -I$(top_srcdir)/SharedLib/misc \
	-I$(top_srcdir)/source -I$(top_srcdir)/source/physics -I$(top_srcdir)/physics \
	-I/usr/local/include/ClanLib-0.8
